# gstreamer-examples

./: .gitignore  README.md
001-simple-media-player/: CMakeLists.txt  basic-tutorial-5
002-simple-usb-camera/: CMakeLists.txt  main.c
003-simple-camera-ctrl-gtk/: CMakeLists.txt  main.c
004-dynamic-pipeline/: CMakeLists.txt
